header 작업 중 서브 메뉴 hover 했을 때 없어지게 만들기

--- a/index.html
+++ b/index.html
@@ -12,19 +12,62 @@
       <!-- 헤더 -->
       <header>
         <div class="header-inner">
-          <div class="logo">
+          <a href="" class="logo">
             <img src="images/dalkomm_bt_logo.svg" alt="달콤 로고" />
-          </div>
+          </a>
           <nav class="nav">
+            <ul class="gnb">
+              <li>
+                <a href="#">Dal.Komm</a>
+                <ul class="depth2">
+                  <li><a href="#">브랜드 이야기</a></li>
+                  <li><a href="#">App 소개</a></li>
+                  <li><a href="#">다날에프엔비 이야기</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">메뉴</a>
+                <ul class="depth2">
+                  <li><a href="#">메뉴</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">매장</a>
+                <ul class="depth2">
+                  <li><a href="#">매장찾기</a></li>
+                  <li><a href="#">글로벌 달콤</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">새로운 소식</a>
+                <ul class="depth2">
+                  <li><a href="#">뉴스</a></li>
+                  <li><a href="#">공지사항</a></li>
+                  <li><a href="#">달콤 스토리</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">창업안내</a>
+                <ul class="depth2">
+                  <li><a href="#">가맹점 개설 안내</a></li>
+                  <li><a href="#">창업 상담 신청</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#"><button class="header_shop_btn">SHOP</button></a>
+              </li>
+            </ul>
+          </nav>
+          <!-- <nav class="nav">
             <ul>
               <li>
                 <a href="#"
                   >Dal.Komm
-                  <!-- <ul class="sub_menu">
+                  <ul class="sub_menu">
                     <li><a href="">브랜드 이야기</a></li>
                     <li><a href="">App 소개</a></li>
                     <li><a href="">다날에프엔비 이야기</a></li>
-                  </ul> -->
+                  </ul>
                 </a>
               </li>
               <li><a href="#">메뉴</a></li>
@@ -32,13 +75,27 @@
               <li><a href="#">새로운 소식</a></li>
               <li><a href="#">창업안내</a></li>
               <li>
-                <a href="#">shop<span></span></a>
+                <a href="#"><span class="header_shop">SHOP</span></a>
               </li>
             </ul>
-          </nav>
+            <ul class="depth1">
+              <li>
+                
+              </li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </nav> -->
         </div>
       </header>
+
       <!-- 배너 -->
+      <div class="banner">
+        <!-- <img src="images/banner_img_row.png" alt="" /> -->
+      </div>
+
       <!-- 컨텐츠 -->
       <!-- 신메뉴 -->
       <!-- 시그니처 -->
