banner bullet 해결중

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="" />
     <title>달콤커피</title>
   </head>
   <body>
@@ -92,7 +93,20 @@
       </header>
 
       <!-- 배너 -->
-      <div class="banner">
+      <div class="banner clearfix">
+        <div class="banner-bg"></div>
+        <div class="banner-textBox">
+          <h1>
+            달콤이 주는<br />
+            용돈 받으세요~
+          </h1>
+          <a href="" class="banner-btn">자세히 보기</a>
+        </div>
+        <div class="banner-swiper">
+          <span class="banner-swiper-bullet"></span>
+          <span class="banner-swiper-bullet"></span>
+          <span class="banner-swiper-bullet"></span>
+        </div>
         <!-- <img src="images/banner_img_row.png" alt="" /> -->
       </div>
 
