신메뉴까지 작성중

--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="images/favi.png" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="" />
-    <title>달콤커피</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <title>달콤커피_클론코딩</title>
   </head>
   <body>
     <div id="wrap">
       <!-- 헤더 -->
-      <header>
+      <header class="container">
         <div class="header-inner">
           <a href="" class="logo">
             <img src="images/dalkomm_bt_logo.svg" alt="달콤 로고" />
@@ -93,14 +97,14 @@
       </header>
 
       <!-- 배너 -->
-      <div class="banner clearfix">
+      <div class="banner container">
         <div class="banner-bg"></div>
         <div class="banner-textBox">
           <h1>
             달콤이 주는<br />
             용돈 받으세요~
           </h1>
-          <a href="" class="banner-btn">자세히 보기</a>
+          <a href="#" class="banner-bt-btn">자세히 보기</a>
         </div>
         <div class="banner-swiper">
           <span class="banner-swiper-bullet"></span>
@@ -111,7 +115,79 @@
       </div>
 
       <!-- 컨텐츠 -->
+
       <!-- 신메뉴 -->
+      <div class="new-menu container">
+        <div class="new-menu-bg"></div>
+        <div class="new-menu_titleBOX">
+          <h3>#Strawberry</h3>
+          <h1>달콤 신메뉴</h1>
+          <p>
+            커피의 전문성을 부각시키는 컨텐츠와 함께<br />
+            비쥬얼, 맛, 건강함 그리고 마시는 재미까지<br />
+            함께 선사합니다
+          </p>
+          <div class="new-menu_view">
+            <a href="#">VIEW MORE</a>
+            <a href="#"><img src="images/arrow_right.png" alt="" /></a>
+          </div>
+        </div>
+
+        <div class="new-menu-list">
+          <ul>
+            <li>
+              <img src="images/li_data_1.png" alt="" />
+              <p class="menu-name">스트로베리 라떼</p>
+              <p class="menu-name-sub">Strawberry Latte</p>
+              <p class="menu-text">
+                상큼하고 달콤한 국내산 딸기가 듬뿍<br />
+                들어가 시원하게 즐길 수 있는 스트로베리<br />
+                라떼
+              </p>
+            </li>
+            <li>
+              <img src="images/li_data_2.png" alt="" />
+              <p class="menu-name">스트로베리 라떼</p>
+              <p class="menu-name-sub">Strawberry Latte</p>
+              <p class="menu-text">
+                상큼하고 달콤한 국내산 딸기가 듬뿍<br />
+                들어가 시원하게 즐길 수 있는 스트로베리<br />
+                라떼
+              </p>
+            </li>
+            <li>
+              <img src="images/li_data_3.png" alt="" />
+              <p class="menu-name">스트로베리 라떼</p>
+              <p class="menu-name-sub">Strawberry Latte</p>
+              <p class="menu-text">
+                상큼하고 달콤한 국내산 딸기가 듬뿍<br />
+                들어가 시원하게 즐길 수 있는 스트로베리<br />
+                라떼
+              </p>
+            </li>
+            <li>
+              <img src="images/li_data_4.png" alt="" />
+              <p class="menu-name">스트로베리 라떼</p>
+              <p class="menu-name-sub">Strawberry Latte</p>
+              <p class="menu-text">
+                상큼하고 달콤한 국내산 딸기가 듬뿍<br />
+                들어가 시원하게 즐길 수 있는 스트로베리<br />
+                라떼
+              </p>
+            </li>
+            <li>
+              <img src="images/li_data_5.png" alt="" />
+              <p class="menu-name">스트로베리 라떼</p>
+              <p class="menu-name-sub">Strawberry Latte</p>
+              <p class="menu-text">
+                상큼하고 달콤한 국내산 딸기가 듬뿍<br />
+                들어가 시원하게 즐길 수 있는 스트로베리<br />
+                라떼
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
       <!-- 시그니처 -->
       <!-- notice -->
       <!-- 창업/파트너 -->
