시그니처 영역 작업중

--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
               <p class="menu-name-sub">Strawberry Latte</p>
               <p class="menu-text">
                 상큼하고 달콤한 국내산 딸기가 듬뿍<br />
-                들어가 시원하게 즐길 수 있는 스트로베리<br />
-                라떼
+                들어가 시원하게 즐길 수 있는 스트로베리 라떼
               </p>
             </li>
             <li>
@@ -151,8 +150,7 @@
               <p class="menu-name-sub">Strawberry Latte</p>
               <p class="menu-text">
                 상큼하고 달콤한 국내산 딸기가 듬뿍<br />
-                들어가 시원하게 즐길 수 있는 스트로베리<br />
-                라떼
+                들어가 시원하게 즐길 수 있는 스트로베리 라떼
               </p>
             </li>
             <li>
@@ -161,8 +159,7 @@
               <p class="menu-name-sub">Strawberry Latte</p>
               <p class="menu-text">
                 상큼하고 달콤한 국내산 딸기가 듬뿍<br />
-                들어가 시원하게 즐길 수 있는 스트로베리<br />
-                라떼
+                들어가 시원하게 즐길 수 있는 스트로베리 라떼
               </p>
             </li>
             <li>
@@ -171,8 +168,7 @@
               <p class="menu-name-sub">Strawberry Latte</p>
               <p class="menu-text">
                 상큼하고 달콤한 국내산 딸기가 듬뿍<br />
-                들어가 시원하게 즐길 수 있는 스트로베리<br />
-                라떼
+                들어가 시원하게 즐길 수 있는 스트로베리 라떼
               </p>
             </li>
             <li>
@@ -181,14 +177,30 @@
               <p class="menu-name-sub">Strawberry Latte</p>
               <p class="menu-text">
                 상큼하고 달콤한 국내산 딸기가 듬뿍<br />
-                들어가 시원하게 즐길 수 있는 스트로베리<br />
-                라떼
+                들어가 시원하게 즐길 수 있는 스트로베리 라떼
               </p>
             </li>
           </ul>
         </div>
       </div>
+
       <!-- 시그니처 -->
+      <div class="signature container">
+        <div class="signature-titleBox">
+          <h3>Portion Coffee</h3>
+          <p>시그니처 블랙 포션커피는</p>
+          <p>
+            달콤의 시그니처 블렌딩을 포션에 담아 언제<br />
+            어디서나 쉽고 빠르게 즐길수 있는 데일리<br />
+            포션커피입니다.
+          </p>
+          <p>
+            HOT/ICE 구분없이 홈카페, 사무실, 트레킹 등<br />
+            커피가 필요한 곳이라면 함께 즐겨보세요!
+          </p>
+          <a href="#"><button>구매하러 가기</button></a>
+        </div>
+      </div>
       <!-- notice -->
       <!-- 창업/파트너 -->
       <!-- 오더&길찾기 -->
