모든 밑줄 hover 밑 서브 메뉴 드롭다운 해결하기

--- a/index.html
+++ b/index.html
@@ -37,17 +37,16 @@
           <div class="signature-buy">
             <a href="#">
               <div class="textBox">
-                달콤<br>
-                시그니처<br>
-                ♥<br>
-                액상커피<br>
-                ▼
+              달콤<br>
+              시그니처<br>
+              ♥<br>
+              액상커피<br>
+              <!-- ▼ -->
               </div>
-              <div class="arrow"></div>
             </a>
           </div>
         </div>
-        <a href=""><button class="close-icon" type="button"></button></a>
+        <a href=""><button class="close-icon" type="button" onclick=""></button></a>
       </div>
       <!-- 헤더 -->
       <header class="header">
@@ -58,7 +57,7 @@
           <nav class="nav">
             <ul class="gnb">
               <li>
-                <a href="#">Dal.Komm</a>
+                <a href="#" class="gnb-title">Dal.Komm</a>
                 <ul class="depth2">
                   <li><a href="#">브랜드 이야기</a></li>
                   <li><a href="#">App 소개</a></li>
@@ -66,20 +65,20 @@
                 </ul>
               </li>
               <li>
-                <a href="#">메뉴</a>
+                <a href="#" class="gnb-title">메뉴</a>
                 <ul class="depth2">
                   <li><a href="#">메뉴</a></li>
                 </ul>
               </li>
               <li>
-                <a href="#">매장</a>
+                <a href="#" class="gnb-title">매장</a>
                 <ul class="depth2">
                   <li><a href="#">매장찾기</a></li>
                   <li><a href="#">글로벌 달콤</a></li>
                 </ul>
               </li>
               <li>
-                <a href="#" class="news">새로운 소식</a>
+                <a href="#" class="gnb-title news" >새로운 소식</a>
                 <ul class="depth2">
                   <li><a href="#">뉴스</a></li>
                   <li><a href="#">공지사항</a></li>
@@ -87,7 +86,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#">창업안내</a>
+                <a href="#" class="gnb-title">창업안내</a>
                 <ul class="depth2">
                   <li><a href="#">가맹점 개설 안내</a></li>
                   <li><a href="#">창업 상담 신청</a></li>
