1. 모든 요소 화면 넓이에 맞춰서 크기 줄어들게 하는 중. 2. 미디어 쿼리 max-width: 768px 반응형 작업하기

--- a/index.html
+++ b/index.html
@@ -24,18 +24,16 @@
 
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/responsive.css">
     <link rel="icon" href="images/favicon.ico">
 
 
     <title>달콤커피_클론코딩</title>
   </head>
   <body>
-    <h1>안녕</h1>
     <div id="wrap">
       <!-- 고정 아이콘 -->
       <div class="floating-wrap">
-        <a href="#"><button class="close-icon" type="button"  onclick="FloatingWrap()"></button></a>
+        <a href="#"><button class="close-icon" onclick="FloatingWrap()"></button></a>
         <div class="floating-fox">
           <a href="#"><img src="images/tms_img_20221116101413_1.png" alt="" class="fox-icon">
           <div class="signature-buy">
@@ -99,8 +97,13 @@
                 <a href="#"><button class="gnb_shop_btn">SHOP</button></a>
               </li>
             </ul>
+            
           </nav>
+          
         </div>
+        <a href="#" class="hamburger">
+          <img src="images/hamburger.svg" alt="메뉴바" />
+        </a>
       </header>
 
       <!-- 배너 -->
