--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="icon" href="images/favicon.ico">
 
 
