헤더 드롭다운 오류 해결 - 자바스크립트 적용

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       </div>
       <!-- 헤더 -->
       <header class="header">
+        <div class="header-gnb-bg"></div>
         <div class="header-inner container">
           <a href="" class="logo">
             <img src="images/dalkomm_bt_logo.svg" alt="달콤 로고" />
@@ -63,37 +64,37 @@
               <li class="depth1">
                 <a href="#" class="gnb-title">Dal.Komm</a>
                 <ul class="depth2">
-                  <li><a href="#">브랜드 이야기</a></li>
-                  <li><a href="#">App 소개</a></li>
-                  <li><a href="#">다날에프엔비 이야기</a></li>
+                  <li><a href="#" class="depth2-text">브랜드 이야기</a></li>
+                  <li><a href="#" class="depth2-text">App 소개</a></li>
+                  <li><a href="#" class="depth2-text">다날에프엔비 이야기</a></li>
                 </ul>
               </li>
               <li class="depth1">
                 <a href="#" class="gnb-title">메뉴</a>
                 <ul class="depth2">
-                  <li><a href="#">메뉴</a></li>
+                  <li><a href="#" class="depth2-text">메뉴</a></li>
                 </ul>
               </li>
               <li class="depth1">
                 <a href="#" class="gnb-title">매장</a>
                 <ul class="depth2">
-                  <li><a href="#">매장찾기</a></li>
-                  <li><a href="#">글로벌 달콤</a></li>
+                  <li><a href="#" class="depth2-text">매장찾기</a></li>
+                  <li><a href="#" class="depth2-text">글로벌 달콤</a></li>
                 </ul>
               </li>
               <li class="depth1">
                 <a href="#" class="gnb-title news" >새로운 소식</a>
                 <ul class="depth2">
-                  <li><a href="#">뉴스</a></li>
-                  <li><a href="#">공지사항</a></li>
-                  <li><a href="#">달콤 스토리</a></li>
+                  <li><a href="#" class="depth2-text">뉴스</a></li>
+                  <li><a href="#" class="depth2-text">공지사항</a></li>
+                  <li><a href="#" class="depth2-text">달콤 스토리</a></li>
                 </ul>
               </li>
               <li class="depth1">
                 <a href="#" class="gnb-title">창업안내</a>
                 <ul class="depth2">
-                  <li><a href="#">가맹점 개설 안내</a></li>
-                  <li><a href="#">창업 상담 신청</a></li>
+                  <li><a href="#" class="depth2-text">가맹점 개설 안내</a></li>
+                  <li><a href="#" class="depth2-text">창업 상담 신청</a></li>
                 </ul>
               </li>
               <li >
@@ -102,10 +103,10 @@
             </ul> 
            
           <!-- </nav> -->
-
-          <a href="#" class="hamburger">
+            <!-- 헤더 햄버거 아이콘 -->
+          <!-- <a href="#" class="hamburger">
             <img src="images/hamburger.svg" alt="메뉴바" />
-          </a>
+          </a> -->
         </div>
       </header>
 
