--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               />
             </div>
             <div class="swiper-slide">
-              <div class="banner-textBox">
+              <div class="banner-textBox container">
                 <h1>
                   지금 딸기와<br />
                   사랑에 빠져보세요
