Mixed Content 배포 에러

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
 
     <!-- 라이브러리 연결 -->
     <link
@@ -17,7 +21,7 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/responsive.css" />
-    <link rel="icon" href="images/favicon.ico" />
+    <link rel="icon" href="images/favi.png" />
     <!-- 제이쿼리 -->
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
 
