Mixed Content 오류 meta 태그 삭제,  스와이퍼 오류 해결

--- a/index.html
+++ b/index.html
@@ -3,33 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="upgrade-insecure-requests"
-    />
-
-    <!-- 라이브러리 연결 -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-
     <!-- AOS 애니메이션 라이브러리 -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/responsive.css" />
     <link rel="icon" href="images/favi.png" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
+
+    <link rel="stylesheet" href="css/main.css" />
+
     <!-- 제이쿼리 -->
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
 
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <!-- AOS 애니메이션 라이브러리 js-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <script src="js/main.js"></script>
-
     <title>달콤커피_클론코딩</title>
   </head>
   <body>
@@ -119,14 +113,8 @@
 
       <!-- 배너 -->
       <!-- Swiper -->
-      <div class="slider-banner">
-        <div
-          class="swiper banner"
-          data-aos="fade-down"
-          data-aos-duration="700"
-          offset="500"
-          data-aos-easing="ease-in-shine"
-        >
+      <div class="slider-banner" data-aos="fade-down" data-aos-duration="700">
+        <div class="swiper banner">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <!--container-->
