--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 
     <script src="js/main.js"></script>
     <title>달콤커피_클론코딩</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R96PB8ZX1W"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-R96PB8ZX1W');
+    </script>
   </head>
   <body>
     <div id="wrap">
